# ExcelScanner

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
aidocs/: database_expert_protocol.md  database_expert_versioning.md  fastapi_expert_protocol.md  fastapi_expert_versioning.md  pyside6_expert_protocol.md  pyside6_expert_versioning.md  sqlalchemy_expert_protocol.md  sqlalchemy_expert_versioning.md
aidocs/ai_protocols/: Ai_Protocol_Template.md
aidocs/docs/: Ai_Protocol_Template.md
dummy_file/: Copy of IN32097_NMB SINGAPORE LIMITED_16DEC2024.xlsx  ST-2025-03-002_SERVICE(FISCHER BELL PRIVATE LTD).xlsx
excel_scanner/: __init__.py  core.py  exceptions.py  file_scanner.py  quotation_scanner_setting.json  scanner.py
excel_scanner/config/: quotation_scanner_setting.json
tests/: FF_Tree_structure.py  cell_content.py  find_col_by_keyword.py  gitaware-tree.py  keyword_cell.py  keyword_content.py  slice_content.py  test_dummy.py  test_scanner.py
